--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://user:pass@localhost:27017/mongodb-1?authSource=admin"
+DATABASE_URL="mongodb://admin:pass@localhost:27016/mongodb?authSource=admin"
