--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,8 @@
 version: '3'
 services:
-  myapplication:
-    image: mongodb/mongodb-community-server:6.0-ubi8
-    environment:
-      - CONN_STR=mongodb://user:pass@mongodb
-    command: '/bin/bash -c "sleep 5; mongosh $$CONN_STR --eval \"show dbs;\""'
-    depends_on:
-      - mongodb
-  mongodb:
-    image: mongodb/mongodb-community-server:6.0-ubi8
+  loggerDB:
+    image:
+      mongo:latest
     environment:
       - MONGO_INITDB_ROOT_USERNAME=user
       - MONGO_INITDB_ROOT_PASSWORD=pass
