--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jdenticon": "^3.3.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "prisma": "^5.15.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@prisma/client": "^5.15.1"
+    "@prisma/client": "^5.16.1",
+    "@types/node": "^20.14.9",
+    "nodemon": "^3.1.4",
+    "prisma": "^5.16.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
