--- a/.env
+++ b/.env
@@ -4,4 +4,13 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://admin:pass@localhost:27016/mongodb?authSource=admin"
+#DATABASE_URL="mongodb://monty:pass@localhost:27017/mongo?authSource=admin&directConnection=true"
+
+#DATABASE_URL="mongodb://admin:pass@localhost:27016/mongodb?authSource=admin"
+
+
+DATABASE_URL: 'mongodb://monty:pass@localhost:27016/mydatabase?authSource=admin&directConnection=true'
+PORT: 3005
+
+
+
