--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@
 
 DATABASE_URL: 'mongodb://monty:pass@localhost:27016/mydatabase?authSource=admin&directConnection=true'
 PORT: 3005
+JWT_SECRET: 'SECRET_KEY_OF_SOCIAL_NETWORK'
 
 
 
