chore(user-controller): add env variable for 'token expire in'

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@
 DATABASE_URL: 'mongodb://monty:pass@localhost:27016/mydatabase?authSource=admin&directConnection=true'
 PORT: 3005
 JWT_SECRET: 'SECRET_KEY_OF_SOCIAL_NETWORK'
+TOKEN_EXPIRES_IN: '7d'
 
 
 
