--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,11 @@ services:
       - db
     environment:
       DATABASE_URL: 'mongodb://monty:pass@db:27017/mydatabase?authSource=admin&directConnection=true'
+
+  react-app: # React-приложение
+    build: ../social-react-redux-express-client # Путь к вашему React-приложению относительно корня вашего проекта
+    ports:
+      - '80:80' # Порт, на котором будет доступно ваше React-приложение
+      - '8000:8000' # Порт, на котором будет доступно ваше React-приложение
+volumes:
+  react_app: # Объявление именованного тома
